@@ -79,3 +79,6 @@ ploth(x=0,2*Pi,if (x <1, [cos(x),sin(x)], 1),"Parametric")
 ploth(t=0,2*Pi,[sin(5*t),sin(7*t)],"Recursive",100)
 ploth(x=0,2*Pi,1,"Parametric")
 ploth(x=0,1,x,,1)
+default(graphcolormap,["white","black","gray","violetred","red","green","blue","gainsboro","purple"])
+default(graphcolors,[7,4,9,8,5,6])
+ploth(X=-1,9,vector(6,k,sin(X+k)))
